@yamnyk | refactor, resolve team-description-images overflow

--- a/src/scss/sections/_team.scss
+++ b/src/scss/sections/_team.scss
@@ -1,5 +1,6 @@
 .team {
   padding-top: 15rem;
+  overflow-x: hidden;
 }
 
 .bold-text {
@@ -9,6 +10,8 @@
 .team-description {
   margin-bottom: 12.5rem;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 
   &:before {
     content: '';
@@ -41,42 +44,46 @@
   }
 
   &-content {
-    display: inline-block;
+    flex-basis: 50%;
   }
-}
 
-
-
-.team-description-subtitle {
-  font-family: Releway, sans-serif;
-  line-height: 1.35;
-  font-size: 2rem;
-  width: 64rem;
-  color: #07002c;
-  margin-bottom: 3rem;
-}
-
-.team-description-bonus {
-  font-family: Releway, sans-serif;
-  line-height: 1.35;
-  font-size: 2rem;
-  color: black;
-  width: 68rem;
-
-  .team-description-bonus-highlight {
-    @include gradBluViolet(to left);
-    color: #fff;
-    font-weight: 100;
+  &-subtitle {
+    font-family: Releway, sans-serif;
     line-height: 1.35;
-    padding: 0.3rem;
+    font-size: 2rem;
+    width: 64rem;
+    color: #07002c;
+    margin-bottom: 3rem;
+  }
+
+  &-bonus {
+    font-family: Releway, sans-serif;
+    line-height: 1.35;
+    font-size: 2rem;
+    color: black;
+    width: 68rem;
+
+    &-highlight {
+      @include gradBluViolet(to left);
+      color: #fff;
+      font-weight: 100;
+      line-height: 1.35;
+      padding: 0.3rem;
+    }
+  }
+
+  &-images {
+    flex-basis: 50%;
+    position: relative;
+    top: 1rem;
+    right: -2rem;
   }
 }
 
-.team-description-images {
-  position: relative;
-  top: 1rem;
-  right: -2rem;
-}
+
+
+
+
 
 .team-description-photo-sharon,
 .team-description-photo-olga {
@@ -104,7 +111,6 @@
 
 .hexagon-1,
 .hexagon-2 {
-  display: block;
   position: absolute;
   opacity: 0.97;
   -webkit-clip-path: polygon(45% 1.33975%, 46.5798% 0.60307%, 48.26352% 0.15192%, 50% 0%, 51.73648% 0.15192%, 53.4202% 0.60307%, 55% 1.33975%, 89.64102% 21.33975%, 91.06889% 22.33956%, 92.30146% 23.57212%, 93.30127% 25%, 94.03794% 26.5798%, 94.48909% 28.26352%, 94.64102% 30%, 94.64102% 70%, 94.48909% 71.73648%, 94.03794% 73.4202%, 93.30127% 75%, 92.30146% 76.42788%, 91.06889% 77.66044%, 89.64102% 78.66025%, 55% 98.66025%, 53.4202% 99.39693%, 51.73648% 99.84808%, 50% 100%, 48.26352% 99.84808%, 46.5798% 99.39693%, 45% 98.66025%, 10.35898% 78.66025%, 8.93111% 77.66044%, 7.69854% 76.42788%, 6.69873% 75%, 5.96206% 73.4202%, 5.51091% 71.73648%, 5.35898% 70%, 5.35898% 30%, 5.51091% 28.26352%, 5.96206% 26.5798%, 6.69873% 25%, 7.69854% 23.57212%, 8.93111% 22.33956%, 10.35898% 21.33975%);
@@ -115,7 +121,7 @@
   width: 6rem;
   height: 6rem;
   bottom: 20rem;
-  left: 78rem;
+  left: 5rem;
   @include gradBluViolet(to top right);
   transform: rotateZ(15deg);
 }
@@ -124,7 +130,7 @@
   width: 9rem;
   height: 9rem;
   right: 23rem;
-  top: 0;
+  top: 45rem;
   @include gradOrangePurple(to bottom);
   transform: rotateZ(33deg);
 }
